# ChangeLog for dev-java/scout
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Feb 2007; <kiorky@gentoo.org> +files/0.7_rc2, +scout-0.7_rc2.ebuild,
  +files/0.7_rc2/build.xml:
  Add dev-java/scout:
  	Apache Scout is an implementation of the JSR 93 (JAXR).
