@@ -1,16 +1,16 @@
-AUX 0.7_rc2/build.xml 716 RMD160 190623922e8df35b471800c22c4d36d7d5b60537 SHA1 99701c6a80fb5afc8892ed91d772141092292445 SHA256 d561e2ef74309da44ecd76fcd63910d222fc5a0ab1ad328b1a5c6a98b33cd57c
-MD5 b020ce2e6b54a418cf11cbc1247b8672 files/0.7_rc2/build.xml 716
-RMD160 190623922e8df35b471800c22c4d36d7d5b60537 files/0.7_rc2/build.xml 716
-SHA256 d561e2ef74309da44ecd76fcd63910d222fc5a0ab1ad328b1a5c6a98b33cd57c files/0.7_rc2/build.xml 716
+AUX 0.7_rc2/build.xml 3109 RMD160 383024482104b1a6dc85648ddc1bd89709c02bb6 SHA1 c3b891f8ea2bd7988e9f06d3a22e6c4533d11c1c SHA256 ba08dd4c637a295f3288a4e152f54a7a7fcb41e31151ec660800ce7aa4402dda
+MD5 c184cffd07a7e3e5ad7b04360c97229a files/0.7_rc2/build.xml 3109
+RMD160 383024482104b1a6dc85648ddc1bd89709c02bb6 files/0.7_rc2/build.xml 3109
+SHA256 ba08dd4c637a295f3288a4e152f54a7a7fcb41e31151ec660800ce7aa4402dda files/0.7_rc2/build.xml 3109
 DIST scout-0.7_rc2.tar.bz2 68506 RMD160 b2669cdcd42c87579db5ec46362865e30bd22a05 SHA1 7825097cbc3a854872e55603dde3f5df274f7efa SHA256 6563c06467480b01f11a18722846dc17f77583a0d6512d820f5c01d34b67a1dd
-EBUILD scout-0.7_rc2.ebuild 964 RMD160 52efc0554a60b50bb4ec3ac12259c66f19975fbf SHA1 e9f8aa9578630d90ba828836b22a565399f1ab94 SHA256 994fe9d240261affecc1523f1d4144f33eacceaaad5e07306f6e51654b40ed75
-MD5 b7b176d31f2890ed2998d92da4eb29c4 scout-0.7_rc2.ebuild 964
-RMD160 52efc0554a60b50bb4ec3ac12259c66f19975fbf scout-0.7_rc2.ebuild 964
-SHA256 994fe9d240261affecc1523f1d4144f33eacceaaad5e07306f6e51654b40ed75 scout-0.7_rc2.ebuild 964
-MISC ChangeLog 299 RMD160 ace92435bdcdcdc0f52968ad9b763e78b584ea7a SHA1 dff9e823661bfb0b46dc186daef755deb61f6d8d SHA256 7933c0c83556b752c7b0a8c1bfc9d46d90df49c6c15673703f38184f711e7fe3
-MD5 f1d0841c8ebfa1eeff4f211be873e4ad ChangeLog 299
-RMD160 ace92435bdcdcdc0f52968ad9b763e78b584ea7a ChangeLog 299
-SHA256 7933c0c83556b752c7b0a8c1bfc9d46d90df49c6c15673703f38184f711e7fe3 ChangeLog 299
+EBUILD scout-0.7_rc2.ebuild 1638 RMD160 f326d61a82086a3eae5f1474b4aac77915663ac8 SHA1 af12c9e7439b99746b0b4d09e1c0a284d3a12f03 SHA256 f097f96bf50d99f9d8da4dacd6f3d37e7e47b2e598457a8bfa537ace7eaabaa8
+MD5 857e0db2bce6bf63809fda1170fbfde2 scout-0.7_rc2.ebuild 1638
+RMD160 f326d61a82086a3eae5f1474b4aac77915663ac8 scout-0.7_rc2.ebuild 1638
+SHA256 f097f96bf50d99f9d8da4dacd6f3d37e7e47b2e598457a8bfa537ace7eaabaa8 scout-0.7_rc2.ebuild 1638
+MISC ChangeLog 435 RMD160 89f712a61175bf2b38d8e0a0973596a1639cc73e SHA1 b1bf96c871eb2463ab1bb3e04182be30a930c63a SHA256 cb6be1bb83d44a28de68e73a3ac4aca3927fcdd37fa1da424b6387f32b183c1b
+MD5 f2d5f7189fd441ffaa96d02ea49e18ca ChangeLog 435
+RMD160 89f712a61175bf2b38d8e0a0973596a1639cc73e ChangeLog 435
+SHA256 cb6be1bb83d44a28de68e73a3ac4aca3927fcdd37fa1da424b6387f32b183c1b ChangeLog 435
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
